<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ADS_COMMUNICATOR_STATE" Id="{cc845677-30c8-4925-a469-51cebf71aba8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE ADS_COMMUNICATOR_STATE :
(
	IDLE_OR_DONE,
	READ_SYMBOL_INFO,
	DATA_PROCESSING,
	WAIT_FOR_NEXT_CYCLE
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>