<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ADS_REQUEST_ITEM" Id="{220104c3-5ee6-4854-ac97-ccd9b08efb41}">
    <Declaration><![CDATA[{attribute 'enable_dynamic_creation'}	
TYPE ADS_REQUEST_ITEM :
STRUCT
	ReadSymbolInfo : Tc2_Utilities.PLC_ReadSymInfoByName;
	ReadMode : BOOL;
	Read : Tc2_System.ADSREADEX;
	Write : Tc2_System.ADSWRITE;
	IndexGroupAndOffsetValid : BOOL;	
	ReceivedBytesCountTarget : POINTER TO UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>